--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -178,32 +178,32 @@
 
       <div class="box">
          <img src="images/icon-2.png" alt="">
-         <h3>outdoor dining</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, sunt?</p>
+         <h3>Comé donde quieras</h3>
+         <p>Reclamo la diez te brinda comida y bebida gratis.</p>
       </div>
 
       <div class="box">
          <img src="images/icon-3.png" alt="">
-         <h3>beach view</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, sunt?</p>
+         <h3>Hace turismo</h3>
+         <p>Disfruta del partido y del lugar haciendo turismo.</p>
       </div>
 
       <div class="box">
          <img src="images/icon-4.png" alt="">
-         <h3>decorations</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, sunt?</p>
+         <h3>Gran hospedaje</h3>
+         <p>Disfruta de la mejor estadia.</p>
       </div>
 
       <div class="box">
          <img src="images/icon-5.png" alt="">
-         <h3>swimming pool</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, sunt?</p>
+         <h3>Pileta incluida</h3>
+         <p>Pileta climatizada para disfrutar con quien quieras.</p>
       </div>
 
       <div class="box">
          <img src="images/icon-6.png" alt="">
-         <h3>resort beach</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, sunt?</p>
+         <h3>¿Alguien dijo playa?</h3>
+         <p>Disfrutá de la costa Argentina y sus mejores playas.</p>
       </div>
 
    </div>
@@ -266,7 +266,7 @@ src="https://widgets.api-sports.io/2.0.3/widgets.js">
          <input type="email" name="email" required maxlength="50" placeholder="indique su mail" class="box">
          <input type="number" name="number" required maxlength="10" min="0" max="9999999999" placeholder="indique su número de teléfono" class="box">
          <textarea name="msg" class="box" required maxlength="1000" placeholder="Deje su mensaje" cols="30" rows="10"></textarea>
-         <input type="submit" value="send message" name="send" class="btn">
+         <input type="submit" value="Deje su mensaje" name="send" class="btn">
       </form>
 
       <div class="faq">
@@ -293,10 +293,6 @@ src="https://widgets.api-sports.io/2.0.3/widgets.js">
 
 </section>
 
-<!-- contact section ends -->
-
-<!-- reviews section starts  -->
-
 <section class="reviews" id="reviews">
 
    <div class="swiper reviews-slider">
@@ -304,33 +300,35 @@ src="https://widgets.api-sports.io/2.0.3/widgets.js">
       <div class="swiper-wrapper">
          <div class="swiper-slide box">
             <img src="images/pic-1.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Carlos Gomez</h3>
+            <p>Un desayuno muy completo, todo riquísimo.
+               Sin lugar a dudas repetiremos.
+               Muchas gracias por todo!</p>
          </div>
          <div class="swiper-slide box">
             <img src="images/pic-2.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Carla Diez</h3>
+            <p>Me pongo la camiseta de esta excelente agencia de turismo ¡Muchas gracias por todo!</p>
          </div>
          <div class="swiper-slide box">
             <img src="images/pic-3.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Felipe Chocron</h3>
+            <p>¡Pude ver a boquita! ¡No más palabras que agradecer a todo el equipo!</p>
          </div>
          <div class="swiper-slide box">
             <img src="images/pic-4.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Luisa Dominguez</h3>
+            <p>¡El mejor viaje de mi vida junto al decano!</p>
          </div>
          <div class="swiper-slide box">
             <img src="images/pic-5.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Charly Paez</h3>
+            <p>Todo perfecto.</p>
          </div>
          <div class="swiper-slide box">
             <img src="images/pic-6.png" alt="">
-            <h3>john deo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates blanditiis optio dignissimos eaque aliquid explicabo.</p>
+            <h3>Dolores Zabala</h3>
+            <p>¡Un viaje muy recomendable, único!</p>
          </div>
       </div>
 
@@ -376,18 +374,8 @@ src="https://widgets.api-sports.io/2.0.3/widgets.js">
 
 </section>
 
-<!-- footer section ends -->
-
-
-
-
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-<!-- custom js file link  -->
 <script src="js/script.js"></script>
 
 </body>
