--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -15,7 +15,11 @@
 
 </head>
 <body>
-   
+
+   <script src="js/jquery-3.6.4.min.js"></script> 
+   <script>$(document).ready(function(){
+          alert("BIENVENIDO/A A RECLAMO LA DIEZ");});
+   </script>  
 
 <section class="header">
 
@@ -137,7 +141,7 @@
       </div>
       <div class="content">
          <h3>¿Qué obtendrás con nuestros viajes?</h3>
-         <p>"Reclamo la diez" es una de las agencias de viajes más reconocidas y recomendadas de la Argentina. Aprovecha nuestros planes y conoce distintos estadios del país. Viajá con la confianza de saber que estamos con vos.</p>
+         <p>"Reclamo la diez" es una de las agencias de viajes más reconocidas y recomendadas de la Argentina. Aprovecha nuestros planes y conocé distintos estadios del país. Viajá con la confianza de saber que estamos con vos.</p>
          <a href="#reservation" class="btn">¡Reserva ya!</a>
       </div>
    </div>
@@ -148,7 +152,7 @@
       </div>
       <div class="content">
          <h3>EMPRESA LÍDER</h3>
-         <p>EN ESTA PÁGINA PODRÁS VER LOS RESULTADOS DE LA LIGA PROFESIONAL ARGENTINA Y CONSULTAR TABLA DE POSICIONES. ADEMÁS VIAJAR CON NUESTRA EMPRESA A DISTINTOS ESTADIOS DE FÚTBOL ¡PARA QUE NO TE PIERDAS LA EMOCIÓN DE VIVIRLO EN VIVO!</p>
+         <p>EN ESTA PÁGINA PODRÁS <a href="http://www.ole.com.ar/estadisticas/futbol/primera-division.html" target="_blank">VER LOS RESULTADOS DE LA LIGA PROFESIONAL ARGENTINA Y CONSULTAR TABLA DE POSICIONES</a>. ADEMÁS DE VIAJAR CON NUESTRA EMPRESA A DISTINTOS CAMPOS DE FÚTBOL LOCAL ¡PARA QUE NO TE PIERDAS LA EMOCIÓN DE VIVIRLO EN VIVO!</p>
          <a href="#contact" class="btn">Contáctenos</a>
       </div>
    </div>
@@ -191,7 +195,7 @@
       <div class="box">
          <img src="images/icon-4.png" alt="">
          <h3>Gran hospedaje</h3>
-         <p>Disfruta de la mejor estadia.</p>
+         <p>Disfrutá de la mejor estadía.</p>
       </div>
 
       <div class="box">
@@ -272,7 +276,7 @@ src="https://widgets.api-sports.io/2.0.3/widgets.js">
          </div>
          <div class="box">
             <h3>¿Cuál es la mejor suscripción de Reclamo la diez?</h3>
-            <p>"Ganamos el campeonato" que incluye todos los partidos tanto de local como de visitante en cualquier estadio. Translados V.I.P. comida, bebida y estadia. "Ganamos el campeonato" tiene un monto final de 45000 ars</p>
+            <p>"Ganamos el campeonato" que incluye todos los partidos tanto de local como de visitante en cualquier estadio. Translados V.I.P. comida, bebida y estadía. "Ganamos el campeonato" tiene un monto final de 45000 ars</p>
          </div>
       </div>
 
