--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -175,37 +175,37 @@
    <div class="box-container">
 
       <div class="box">
-         <img src="brief.svg" alt="">
+         <img src="bolsa.png" alt="">
          <h3>Viaja barato y fácil</h3>
          <p>Podés planificar tu viaje ahora y realizar reservas con opciones económicas y planes increibles.</p>
       </div>
 
       <div class="box">
-         <img src="images/icon-2.png" alt="">
+         <img src="comerafuera 1.png" alt="">
          <h3>Comé donde quieras</h3>
          <p>Reclamo la diez te brinda comida y bebida gratis.</p>
       </div>
 
       <div class="box">
-         <img src="images/icon-3.png" alt="">
+         <img src="turi 1.png" alt="">
          <h3>Hace turismo</h3>
          <p>Disfruta del partido y del lugar haciendo turismo.</p>
       </div>
 
       <div class="box">
-         <img src="images/icon-4.png" alt="">
+         <img src="hotel 1.png" alt="">
          <h3>Gran hospedaje</h3>
-         <p>Disfrutá de la mejor estadía.</p>
+         <p>Gozá de la mejor estadía.</p>
       </div>
 
       <div class="box">
-         <img src="images/icon-5.png" alt="">
+         <img src="pileta 1.png" alt="">
          <h3>Pileta incluida</h3>
-         <p>Pileta climatizada para disfrutar con quien quieras.</p>
+         <p>Pileta climatizada para divertirte con quien quieras.</p>
       </div>
 
       <div class="box">
-         <img src="images/icon-6.png" alt="">
+         <img src="playa 1.png" alt="">
          <h3>¿Alguien dijo playa?</h3>
          <p>Disfrutá de la costa Argentina y sus mejores playas.</p>
       </div>
