--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -12,6 +12,10 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
    
    <link rel="stylesheet" href="css/style.css">
+   <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 
 </head>
 <body>
@@ -67,7 +71,7 @@
          <div class="box swiper-slide">
             <img src="futbol.jpg" alt="">
             <div class="flex">
-               <h3>¡VIVÍ JUNTO A NOSOTROS EL APASIONANTE CAMPEONATO ARGENTINO!</h3>
+               <h3> ¡VIVÍ JUNTO A NOSOTROS EL APASIONANTE CAMPEONATO ARGENTINO!</h3>
                <a href="#contact" class="btn">¡Reserva ya!</a>
             </div>
          </div>
@@ -189,7 +193,7 @@
       <div class="box">
          <img src="turi 1.png" alt="">
          <h3>Hace turismo</h3>
-         <p>Disfruta del partido y del lugar haciendo turismo.</p>
+         <p>Disfrutá del partido y del lugar haciendo turismo.</p>
       </div>
 
       <div class="box">
