--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -186,14 +186,14 @@
 
       <div class="box">
          <img src="comerafuera 1.png" alt="">
-         <h3>Comé donde quieras</h3>
+         <h3 class="animate__animated animate__bounce">Comé donde quieras</h3>
          <p>Reclamo la diez te brinda comida y bebida gratis.</p>
       </div>
 
       <div class="box">
          <img src="turi 1.png" alt="">
-         <h3>Hace turismo</h3>
-         <p>Disfrutá del partido y del lugar haciendo turismo.</p>
+         <h3 class="animate__animated animate__bounce">Hace turismo</h3>
+         <p>Disfrutá del lugar haciendo turismo.</p>
       </div>
 
       <div class="box">
