--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -180,7 +180,7 @@
 
       <div class="box">
          <img src="bolsa.png" alt="">
-         <h3>Viaja barato y fácil</h3>
+         <h3 class="animate__animated animate__bounce">Viaja barato y fácil</h3>
          <p>Podés planificar tu viaje ahora y realizar reservas con opciones económicas y planes increibles.</p>
       </div>
 
@@ -198,19 +198,19 @@
 
       <div class="box">
          <img src="hotel 1.png" alt="">
-         <h3>Gran hospedaje</h3>
+         <h3 class="animate__animated animate__bounce">Gran hospedaje</h3>
          <p>Gozá de la mejor estadía.</p>
       </div>
 
       <div class="box">
          <img src="pileta 1.png" alt="">
-         <h3>Pileta incluida</h3>
+         <h3 class="animate__animated animate__bounce">Pileta incluida</h3>
          <p>Pileta climatizada para divertirte con quien quieras.</p>
       </div>
 
       <div class="box">
          <img src="playa 1.png" alt="">
-         <h3>¿Alguien dijo playa?</h3>
+         <h3 class="animate__animated animate__bounce">¿Alguien dijo playa?</h3>
          <p>Disfrutá de la costa Argentina y sus mejores playas.</p>
       </div>
 
