--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -155,8 +155,8 @@
          <img src="tigre.jpg" alt="">
       </div>
       <div class="content">
-         <h3>EMPRESA LÍDER</h3>
-         <p>EN ESTA PÁGINA PODRÁS <a href="http://www.ole.com.ar/estadisticas/futbol/primera-division.html" target="_blank">VER LOS RESULTADOS DE LA LIGA PROFESIONAL ARGENTINA Y CONSULTAR TABLA DE POSICIONES</a>. ADEMÁS DE VIAJAR CON NUESTRA EMPRESA A DISTINTOS CAMPOS DE FÚTBOL LOCAL ¡PARA QUE NO TE PIERDAS LA EMOCIÓN DE VIVIRLO EN VIVO!</p>
+         <h3>Empresa líder</h3>
+         <p>En esta página podrás <a href="http://www.ole.com.ar/estadisticas/futbol/primera-division.html" target="_blank">ver los resultados de la Liga Profesional de fútbol y consultar tabla de posiciones</a>. Además de viajar con nuestra empresa a distintas canchas de la primera división ¡Para que no te pierdas la emoción de vivirlo en vivo!</p>
          <a href="#contact" class="btn">Contáctenos</a>
       </div>
    </div>
